# Kinematica

./: .gitignore  LICENSE  README.md
MatrixExercise/: .cproject  .project  CMakeLists.txt  DetectShapes.cpp  Doxyfile  Main.cpp  Matrix.inc  MatrixFunctions.cpp  MatrixFunctions.h  Matrix_test.cpp  Shapedetector.cpp  Shapedetector.h  forward_kinematics.cpp
MatrixExercise/Debug/: Main.gcda  Main.gcno  MatrixExercise  Matrix_test.gcda  Matrix_test.gcno  makefile  subdir.mk
docs/: Kinematica.asta  Opstel Kinematica Dibran Dokter 587252.odt
src/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
src/catkin_ws/devel/include/robotarminterface/: armInstruction.h  moveServos.h  servoPosition.h  singleServo.h  stopServos.h  stopSingleServo.h
src/catkin_ws/devel/lib/pkgconfig/: kinematics.pc  robotarminterface.pc
src/catkin_ws/devel/lib/robotarminterface/: highleveldriver  kinematics  robotarmclient
src/catkin_ws/devel/share/kinematics/cmake/: kinematics-msg-extras.cmake  kinematics-msg-paths.cmake  kinematicsConfig.cmake
src/catkin_ws/src/kinematics/: CMakeLists.txt  package.xml
src/catkin_ws/src/kinematics/msg/: armInstruction.msg  moveServos.msg  servoPosition.msg  singleServo.msg  stopServos.msg  stopSingleServo.msg
src/catkin_ws/src/kinematics/src/: CMakeLists.txt  DetectShapes.cpp  Main.cpp  Matrix.hpp  Matrix.inc  MatrixFunctions.cpp  MatrixFunctions.h  RobotarmController.cpp  RobotarmController.h  Servo.cpp  Servo.h  Shape.h  Shapedetector.cpp  Shapedetector.h  highlevel.cpp  highlevel.h  license.txt  lowlevel.cpp  robotarm_client.cpp
(+39 files in other folders)
